Fixed sign up issues, fixed layout issues, fixed homepage button issues

--- a/app/assets/stylesheets/components/_accordions.scss
+++ b/app/assets/stylesheets/components/_accordions.scss
@@ -80,9 +80,9 @@
   margin-left: 25%;
 }
 
-.main-container {
-  background-color: $primary;
-}
+// .main-container {
+//   background-color: $primary;
+// }
 .content {
   display: flex;
   background-color: white;
